--- a/form/contact.css
+++ b/form/contact.css
@@ -1,7 +1,7 @@
 /*
   Copyright: www.gabesmithtrombone.com 2017
   Created and Powered by: CS4 Development
-  Update: 6/7/2017
+  Update: 6/18/2017
   Form CSS
 */
 html body {
@@ -16,24 +16,20 @@ html body {
 
 /*Standard Screens*/
 @media screen and (min-width: 800px) {
+
   #contactus fieldset {
     width:320px;
-    padding:20px;
-    border:1px solid #ccc;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;   
-    margin-top: -43em;
-    margin-left: 10em;
-    background-color: #F3F3F3;
+    padding:120px; 
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #contactus legend, h2 {
      font-family : 'Raleway', sans-serif;
-     font-size: 1.3em;
+     font-size: 2em;
      font-weight:bold;
      color:#333;
+     text-align:center;
   }
 
   #contactus label {
@@ -53,12 +49,11 @@ html body {
     -webkit-border-radius: 5px;
     -khtml-border-radius: 5px;
     border-radius: 5px;
-
   }
 
   #contactus input[type="text"] {
     height:30px;
-    width:220px;
+    width:100%;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;   
@@ -67,17 +62,20 @@ html body {
   }
 
   #contactus #scaptcha {
-    width:80px;
+    width:100%;
     height:25px;
-    margin-top: .5em;
+    margin-top: 3em;
+    z-index: 1;
   }
 
   #contactus input[type="submit"] {
      width:100px;
      height:30px;
-     padding-left:0px;
      border: none;
-     background-color: lightgray;
+     margin-top: 3em;
+     text-align: center;
+     position: absolute;
+     margin-left:-3em;
   }
 
   #contactus textarea {
@@ -94,10 +92,6 @@ html body {
     border : 1px solid #990000;
     background-color : #ffff99;
     font-weight:bold;
-  }
-
-  #contactus .container {
-     margin-bottom: 10px;
   }
 
   #contactus .error {
@@ -151,17 +145,12 @@ html body {
 
 /*----Mobile Screens-------*/
 @media screen and (min-width: 0px) and (max-width:799px) {
+
   #contactus fieldset {
      width:320px;
      padding:20px;
-     border:1px solid #ccc;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;   
-    margin-top: 5em;
-    margin-left: 1em;
-    background-color: #F3F3F3;
+     margin-left: auto;
+     margin-right: auto;
   }
 
   #contactus legend, h2 {
@@ -193,7 +182,7 @@ html body {
 
   #contactus input[type="text"] {
     height:24px;
-    width:220px;
+    width:100%;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
      border-radius: 5px;   
@@ -202,7 +191,7 @@ html body {
   }
 
   #contactus #scaptcha {
-    width: 80px;
+    width: 100%;
     height:22px;
     margin-top: 10px;
   }
@@ -210,11 +199,8 @@ html body {
   #contactus input[type="submit"] {
      width:100px;
      height:30px;
-     padding-left:0px;
-     
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-     border-radius: 5px;   
+     padding-left:0px; 
+     border:none;
   }
 
   #contactus textarea {
