--- a/lessons/css/lessons.css
+++ b/lessons/css/lessons.css
@@ -1,13 +1,13 @@
 /*
 	Copyright: www.gabesmithtrombone.com 2017
 	Created and powered by: CS4 Development
-	Update: 6/8/2017
+	Update: 6/20/2017
 */
 
 /*Lessons Page*/
 body.body {
-	background-color: #f3f3f3;
-	background-image: url('');
+	background-color: rgb(245, 232, 223);
+	background: url('../images/ensemble.jpg');
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -23,9 +23,14 @@ body.body {
 		display: block;
 		font-family: 'Raleway', sans-serif;
 		color: black;
-	}
+	    background-color: #DFECF5;
+		}
 
 	/*Nav bar*/
+	.navbar {
+		background-color: #DFECF5;
+		padding-bottom: 1em;
+	}
 	div nav.navbar ul {
 		list-style-type: none;
 		text-align: center;
@@ -48,7 +53,7 @@ body.body {
 		border-right: none;
 		border-left: none;
 	}
-	.responsive-menu {
+	.mobilecontainer {
 		display: none;
 	}
 
@@ -71,7 +76,7 @@ body.body {
 	.full-width-testimonial {
 	  background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.1)), url("https://upload.wikimedia.org/wikipedia/commons/8/82/Chicago_sunrise_1.jpg");
 	  background-position: center center;
-	  margin-top: 5em;
+	  margin-top: 3em;
 	}
 
 	.full-width-testimonial-icon .quote-path {
@@ -163,6 +168,7 @@ body.body {
 	.marketing-site-three-up {
 	  text-align: center;
 	  padding: 2rem 0;
+	  background-color: rgb(245, 232, 223);
 	}
 
 	.marketing-site-three-up .row {
@@ -192,13 +198,42 @@ body.body {
 	i {
 		font-size: 3em;
 	}
+	/*Info*/
+	.tab-container {
+		background-color: rgba(223, 236, 245, .9);
+		padding-top: 8em;
+		padding-bottom: 8em;
+	}
+	
+
+	div.tabs-content {
+		background-color: rgba(223, 236, 245, 0);
+		border:none;
+
+	}
+
+	ul.tabs {
+		display:none;
+	}
+
+	#tabs {
+		float:none;
+		margin-left: auto;
+		margin-right:auto;
+		text-align:center;
+		background-color: none;
+	}
+	
+	p#tab-head {
+		font-size: 30px;
+	}
 
 	/*Footer*/
 	footer {
 		font-family: 'Raleway',sans-serif;
-		margin-top: 3em;
 		color: black;
 		text-align: center;
+		background-color: rgba(223, 236, 245, .9);
 	}
 	footer a {
 		text-decoration: none;
@@ -214,13 +249,18 @@ body.body {
 /*---Mobile Devices---*/
 @media screen and (min-width: 0px) and (max-width:799px) {
 	/*Header*/
+	div.header {
+		background-color: #DFECF5;
+	}
 	div.header header a {
 		font-family: 'Raleway', sans-serif;
 		color: black;
 		text-align: center;
 		font-size: 30px;
 		display: block;
-		margin-top: .6em;	
+		padding-top: .6em;
+		padding-bottom: 2em;
+		background-color: #DFECF5;
 	}
 	div.header header a:hover {
 		color: black;
@@ -229,58 +269,152 @@ body.body {
 	div nav.navbar ul {
 		display: none;
 	}
+	/*Mobile Nav*/
 
-
-	.menu-btn div {
-		position: absolute;
-		left: 100%;
-		top: 64%;
-		padding-right: 8px;
-		margin-top: -0.50em;
-		line-height: 1.2;
-		font-size: 18px;
-		font-weight: 200;
-		vertical-align: middle;
-		z-index: 99;
-	}
-	.mobile-nav {
-		position: absolute;
-		display: block;
-		margin-top: -2.1em;
-		margin-left: 1em;
-	}
-	.menu-btn span {
-		display: block;
-		width: 40px;
-		height: 5px;
-		margin: 5px 0;
-		background: rgb(0,0,0);
-		z-index: 99;
+	div.top-bar {
+		background: none;
+		margin-top: -7em;
 	}
 
-	.responsive-menu{
-		display: none;
-		border: 1px solid black;
-		background-color: #f3f3f3;
+	
+	.offcanvas-full-screen {
+	  position: fixed;
+	  z-index: 1;
+	  transition: -webkit-transform 0.3s ease-in-out;
+	  transition: transform 0.3s ease-in-out;
+	  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+	  -webkit-backface-visibility: hidden;
+	  backface-visibility: hidden;
+	  background: rgba(1,1,1,.9);
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 100%;
+	  -webkit-transform: translateX(-100%);
+	  -ms-transform: translateX(-100%);
+	  transform: translateX(-100%);
+	  overflow-y: auto;
 	}
-	.responsive-menu li, .responsive-menu li a {
-		font-family: 'Raleway', sans-serif;
-		text-align: center;
-		list-style-type: none;
-		text-decoration: none;
-		color: black;
-		margin-right: 1em;
+
+	[data-whatinput='mouse'] .offcanvas-full-screen {
+	  outline: 0;
 	}
-	.responsive-menu li a:hover {
-		color: blue;
-		border: 1px solid blue;
-		border-right: none;
-		border-left: none;
+
+	.offcanvas-full-screen.is-transition-overlap {
+	  z-index: 10;
 	}
-	.expand {
-		display: block !important; 
-		position: absolute;
+
+	.offcanvas-full-screen.is-transition-overlap.is-open {
+	  box-shadow: 0 0 10px rgba(10, 10, 10, 0.7);
 	}
+
+	.offcanvas-full-screen.is-open {
+	  -webkit-transform: translate(0, 0);
+	  -ms-transform: translate(0, 0);
+	  transform: translate(0, 0);
+	}
+
+	.offcanvas-full-screen.is-open ~ .off-canvas-content {
+	  -webkit-transform: translateX(100%);
+	  -ms-transform: translateX(100%);
+	  transform: translateX(100%);
+	}
+
+	.offcanvas-full-screen.is-transition-push:after {
+	  position: absolute;
+	  top: 0;
+	  right: 0;
+	  height: 100%;
+	  width: 1px;
+	  box-shadow: 0 0 10px rgba(10, 10, 10, 0.7);
+	  content: " ";
+	}
+
+	.offcanvas-full-screen.is-transition-overlap.is-open ~ .off-canvas-content {
+	  -webkit-transform: none;
+	  -ms-transform: none;
+	  transform: none;
+	}
+
+	.offcanvas-full-screen-inner {
+	  padding: 1rem;
+	  text-align: center;
+	}
+
+	.offcanvas-full-screen-menu {
+	  margin: 0;
+	  list-style-type: none;
+	  display: -webkit-flex;
+	  display: -ms-flexbox;
+	  display: flex;
+	  -webkit-flex-wrap: nowrap;
+	  -ms-flex-wrap: nowrap;
+	  flex-wrap: nowrap;
+	  -webkit-align-items: center;
+	  -ms-flex-align: center;
+	  align-items: center;
+	  width: 100%;
+	  -webkit-flex-wrap: wrap;
+	  -ms-flex-wrap: wrap;
+	  flex-wrap: wrap;
+	}
+
+	.offcanvas-full-screen-menu li {
+	  -webkit-flex: 0 0 auto;
+	  -ms-flex: 0 0 auto;
+	  flex: 0 0 auto;
+	}
+
+	[data-whatinput='mouse'] .offcanvas-full-screen-menu li {
+	  outline: 0;
+	}
+
+	.offcanvas-full-screen-menu  li a {
+	  display: block;
+	  padding: 0.7rem 1rem;
+	  line-height: 1;
+	}
+
+	.offcanvas-full-screen-menu input,
+	.offcanvas-full-screen-menu select,
+	.offcanvas-full-screen-menu a,
+	.offcanvas-full-screen-menu button {
+	  margin-bottom: 0;
+	}
+
+	.offcanvas-full-screen-menu li {
+	  -webkit-flex: 0 0 100%;
+	  -ms-flex: 0 0 100%;
+	  flex: 0 0 100%;
+	  max-width: 100%;
+	}
+
+	.offcanvas-full-screen-menu li a {
+	  -webkit-justify-content: flex-start;
+	  -ms-flex-pack: start;
+	  justify-content: flex-start;
+	  -webkit-align-items: flex-start;
+	  -ms-flex-align: start;
+	  align-items: flex-start;
+	}
+
+	.offcanvas-full-screen-menu a {
+	  color: #fefefe;
+	}
+
+	.offcanvas-full-screen-menu a:hover {
+	  color: #b2b2b2;
+	}
+
+	.offcanvas-full-screen-close {
+	  color: #fefefe;
+	  font-size: 5rem;
+	}
+
+	.offcanvas-full-screen-close:hover {
+	  color: #b2b2b2;
+	}
+
 	
     /*Icons*/
 	div.icons {
@@ -302,7 +436,7 @@ body.body {
 	.full-width-testimonial {
 	  background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.1)), url("https://upload.wikimedia.org/wikipedia/commons/8/82/Chicago_sunrise_1.jpg");
 	  background-position: center center;
-	  margin-top: 5em;
+	  margin-top: 3em;
 	}
 
 	.full-width-testimonial-icon .quote-path {
@@ -394,6 +528,7 @@ body.body {
 	.marketing-site-three-up {
 	  text-align: center;
 	  padding: 2rem 0;
+	  background-color: rgb(245, 232, 223);
 	}
 	
 	.marketing-site-three-up .row {
@@ -424,12 +559,42 @@ body.body {
 		font-size: 3em;
 	}
 
+	/*Info*/
+	.tab-container {
+		background-color: rgba(223, 236, 245, .9);
+		padding-top: 5em;
+		padding-bottom: 8em;
+	}
+	
+
+	div.tabs-content {
+		background-color: rgba(223, 236, 245, 0);
+		border:none;
+
+	}
+
+	ul.tabs {
+		display:none;
+	}
+
+	#tabs {
+		float:none;
+		margin-left: auto;
+		margin-right:auto;
+		text-align:center;
+		background-color: none;
+	}
+	
+	p#tab-head {
+		font-size: 30px;
+	}
+
 	/*Footer*/
 	footer {
 		font-family: 'Raleway', sans-serif;
-		margin-top: 5em;
 		color: black;
 		text-align: center;
+		background-color: rgba(223, 236, 245, .9);
 	}
 	footer a {
 		text-decoration: none;
